Alias domain DNS records are now copied from the target domain at creation time, rather than being created from the selected template.
S3 backups can now be use the new reduced redundancy storage option, which is cheaper but less reliable.
Internationalized domain names are no longer converted to UTF-8 for output from API commands, to avoid the perl "wide character in print" warning.
The interval between bandwidth monitoring cron job runs can now be configured.
---- Changes since 3.80 ----
Updated the Drupal script installer to versions 5.23 and 6.19, phpMyAdmin to 2.11.11 and 3.3.7, CMS Made Simple to 1.8.2, Z-push to 1.4.2, Webcalendar to 1.2.3, ZenCart to 1.3.9f, SugarCRM to 6.0.2, Zikula to 1.2.4, Redmine to 1.0.2, Piwik to 1.0, Zenphoto to 1.3.1.2, phpMyFAQ to 2.6.8, OpenX to 2.8.7, FOSwiki to 1.0.10, Django to 1.2.3, Movable Type to 5.03, Mantis to 1.2.3, eGroupware to 1.8.001.20100920, and PHProjekt to 6.0.4.
Renamed the OpenGoo script installer to Feng Office, and updated to version 1.7.2.
Parallel bzip2 can now be used for backups if the pbzip2 command is installed, via a new option on the Virtualmin Configuration page.
Moved all IP-address related options from the Edit Virtual Server page to the Change IP Address page, where they fit in better and are easier to understand.
Added a server template option to not change the MySQL username when a domain's administration username is changed, and fixed bugs with a similar option for the MySQL password.
The database username and password for a domain can now be changed using the new API commands modify-database-user and modify-database-pass.
When Virtualmin sends a backup to an SSH or FTP destination, it now also creates a .info file that contains meta-infomation about each backup. When restoring only this file needs to be downloaded to list the contents of a backup, which avoids the need to download the complete backup twice.