@@ -2407,11 +2407,13 @@ cert_tabself=Self-Signed Certificate
 cert_tabnew=New Certificate
 cert_tabchain=CA Certificate
 cert_download=Download certificate
+cert_kdownload=Download private key
 cert_pem=PEM format
 cert_pkcs12=PKCS12 format
 cert_pkcs7=PKCS7 format
 cert_also=Also used by domains
 cert_edownload=No SSL certificate found!
+cert_edownload2=No SSL key found!
 cert_eformat=Could not work out requested certificate format
 cert_header4=Certificate authority details
 cert_chain=CA certificate file
